--- a/src/main/resources/MessagesBundle.properties
+++ b/src/main/resources/MessagesBundle.properties
@@ -1,1 +1,8 @@
 user.exists = There is another user with such email in the system
+user.notFound = User with such email was not found!
+email.sent = The email with password recovery link has been sent to your email.
+email.error = Error while trying to send email with password recovery link. Please try again later.
+message.resetPassword.body = Dear GreatStart user!<br><br>Someone has requested to reset a password for your account. If you want to reset your password, please follow the link below. Otherwise you may safely delete this message.<br><br>
+message.resetPassword.subject = Reset password on GreatStart
+message.resetPassword.success = Password changed successfully. Please log in with your new password.
+token.error = Error: 
