added some unit tests and refactored a lil bit

--- a/src/main/resources/MessagesBundle.properties
+++ b/src/main/resources/MessagesBundle.properties
@@ -6,3 +6,5 @@ message.resetPassword.body = Dear GreatStart user!<br><br>Someone has requested 
 message.resetPassword.subject = Reset password on GreatStart
 message.resetPassword.success = Password changed successfully. Please log in with your new password.
 token.error = Error: 
+token.invalid = Invalid token
+token.expired = token expired or has been already used
